@@ -2,6 +2,7 @@
 ;  memcpy.s
 ;
 ;  Copyright (C) 2020, Sergey Belyashov
+;  Copyright (c) 2021, Philipp Klaus Krause
 ;
 ;  This library is free software; you can redistribute it and/or modify it
 ;  under the terms of the GNU General Public License as published by the
@@ -34,14 +35,15 @@
 ; The Z80 has the ldir instruction, which is perfect for implementing memcpy().
 _memcpy:
 ___memcpy:
+	ex	de, hl
 	pop	iy
 	pop	bc
 	ld	a, c
 	or	a, b
-	ret	Z
-	push	hl
-	ex	de, hl
+	jr	Z, end
+	push	de
 	ldir
 	pop	de
+end:
 	jp	(iy)
 
